@@ -351,9 +351,8 @@ table.budget.act_trans td.date				{width:110px; padding-right:0px;}
 .result_indicator							{display:inline-block; vertical-align:top; width:25%;}
 .result_indicator.left_indi					{width:75%; padding-right:25px;}
 .wrap_result_indicator_title				{margin-bottom:10px;}
-.result_main_title							{padding:20px 0; font-size:18px; line-height:24px;}
-.result_separator							{background-color:#47506b; width:960px; height:10px; margin-left:-40px;}
-.wrap_result_table .wrap_result_indicator:last-of-type .result_separator:last-of-type	{display:none;}
+.wrap_result_text							{padding:20px 0;}
+.result_main_title							{font-size:18px; line-height:24px;}
 .result_indicator_title						{padding-bottom:10px; border-bottom:1px solid #aaa; margin-bottom:10px; font-size:14px; font-weight:normal; color:#CCC; line-height:1.35em; }
 .wrap_result_indi_ref						{padding-bottom:15px;}
 .result_indi_head							{font-size:11px; border-bottom:1px solid #4d5264; color:#ccc;}
