@@ -1,3 +1,11 @@
+Development Portal (2020-03-08 shi)
+==============================
+Fix result title and description display
+Add indicator length
+Update result css
+Cleanup glossary section
+
+
 Development Portal (2020-03-05 shi)
 ==============================
 Display @measure and date bars in results
